--- a/index.html
+++ b/index.html
@@ -179,4 +179,5 @@
 			new mlPushMenu( document.getElementById( 'mp-menu' ), document.getElementById( 'trigger' ) );
 		</script>
 	
-</body></html>
+</body>
+</html>
